# macsylib

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  README.md  codemeta.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help-wanted.md
.github/workflows/: ruff.yml  testing.yml
doc/source/: conf.py  index.rst
doc/source/_static/: msl_example_all_systems.tsv
doc/source/_static/code/: msl_example.py
doc/source/developer_guide/: installation.rst  overview.rst
doc/source/developer_guide/api/: hit.rst  index.rst  package.rst
doc/source/modeler_guide/: helper_tools.rst  index.rst  installation.rst  models_V1ToV2.rst  package.rst  publish_package.rst
doc/source/user_guide/: FAQ.rst  big_data.rst  functioning.rst  gembase_convention.rst  index.rst  input.rst  installation.rst  model_definition.rst  new.rst  new_v2.rst  outputs.rst  quickstart.rst
src/macsylib/: __init__.py  cluster.py  config.py  gene.py  hit.py  io.py  licenses.py  model_package.py  package.py  registries.py  report.py  search_systems.py  serialization.py  system.py  utils.py
src/macsylib/scripts/: macsydata.py  macsyprofile.py
src/macsypy/: __init__.py  hit.py  model_conf_parser.py  package.py  search_systems.py  serialization.py  system.py  utils.py
tests/: __init__.py  test_Config.py  test_DefinitionParser.py  test_Exchangeable.py  test_GeneBank.py  test_Indexes.py  test_MacsyDefaults.py  test_Model.py  test_ModelBank.py  test_Profile.py  test_ProfileFactory.py  test_RepliconDB.py  test_Report.py  test_System.py  test_cluster.py  test_functional.py  test_gene.py  test_hit.py  test_io.py  test_macsydata.py  test_macsyprofile.py  test_macsypy.py  test_metadata.py  test_model_conf_parser.py  test_model_package.py  test_package.py  test_registries.py  test_search_genes.py  test_search_systems.py  test_serialization.py  test_solution.py  test_utils.py
tests/data/init_pack/definitions/: model_example.xml
tests/data/init_pack_license/definitions/: model_example.xml
