[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "MacSyLib"
authors = [
    {name="Sophie Abby", email='sophie.abby@univ-grenoble-alpes.fr'},
    {name="Bertrand Neron", email='bneron@pasteur.fr'}
    ]
maintainers = [
    {name="Bertrand Neron", email='bneron@pasteur.fr'}
    ]
description = 'MacSyLib: Module that help to Detect of macromolecular, systems genetic pathways… in prokaryotes protein datasets using systems modelling and similarity search'
readme = "README.md"
license = {file="COPYING"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

requires-python = ">=3.10"

dependencies = [
  "colorlog>=4.0.2",
  "PyYAML>=5.1.1",
  "packaging>=18.0",
  "networkx>=2.4",
  "pandas>=1.03",
  "colorama>=0.4.4",
  "certifi",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-svg2pdfconverter",
    "coverage[toml]",
    "build",
    "ruff",
    "GitPython",
    "pre-commit",
]

model = [
    "GitPython"
]

[project.scripts]
macsydata = "macsylib.scripts.macsydata:main"
macsyprofile = "macslib.scripts.macsyprofile:main"
macsyconfig = "macsylib.scripts.macsyconfig:main"

[project.urls]
Homepage = "https://github.com/gem-pasteur/macsyfinder/"
Documentation = "https://macsyfinder.readthedocs.io/en/latest/"
Repository = "https://github.com/gem-pasteur/macsyfinder/"
Issues = "https://github.com/gem-pasteur/macsyfinder/issues"
Changelog = "https://macsyfinder.readthedocs.io/en/latest/user_guide/new_v2.html#what-s-new-in-macsyfinder-v2"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where=["src"]
include = ["macsylib*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "macsylib.__version__"}

[tool.setuptools.package-data]
macsylib = ["data/pre-push"]


[tool.coverage.run]
branch = true
source = ["src/macsylib"]
command_line = "-m unittest discover -vv"


[tool.ruff]

target-version = "py310"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

src = ['src/macsylib', 'tests', 'pyproject.toml']

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
#F841 Local variable `xxx` is assigned to but never used
"tests/test_System.py" = ["F841"]
